# mcp2skill

./: .coverage  .gitignore  CHANGELOG.md  README.md  README.qmd  pyproject.toml
.claude/commands/m2s/: add.md  generate.md  init.md  list.md  update.md
src/mcp2py/: __init__.py  server.py
src/mcp2skill/: __init__.py  cli.py  exceptions.py  generator.py  schema.py  schema_utils.py  templates.py
tests/: conftest.py
tests/fixtures/: mock_servers.json  mock_tools.json
tests/integration/: test_generated_code.py  test_skill_generation.py
tests/unit/: test_cli.py  test_exceptions.py  test_generator.py  test_schema.py  test_schema_utils.py  test_templates.py
