[project]
name = "mcp2skill"
dynamic = ["version"]
description = "Generate Claude Code skills from mcp2rest servers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    { name = "Ulas Bilgen", email = "ulasbilgen@gmail.com" }
]
keywords = ["mcp", "model-context-protocol", "ai", "llm", "tools", "claude-code", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "requests>=2.31.0",  # For REST API calls to mcp2rest
    "click>=8.1.0",      # CLI framework
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
mcp2skill = "mcp2skill.cli:cli_main"

[project.urls]
Homepage = "https://github.com/ulasbilgen/mcp2skill"
Documentation = "https://github.com/ulasbilgen/mcp2skill#readme"
Repository = "https://github.com/ulasbilgen/mcp2skill"
Issues = "https://github.com/ulasbilgen/mcp2skill/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/mcp2skill/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=mcp2skill --cov-report=term-missing"

[dependency-groups]
dev = [
    "anthropic>=0.71.0",
    "claudette>=0.3.6",
    "dspy>=3.0.3",
    "fastmcp>=2.12.4",
    "ipykernel>=7.0.1",
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "openai>=2.5.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

